--- a/de_DE/home/index.html
+++ b/de_DE/home/index.html
@@ -26,11 +26,11 @@
         <base href="https://deutschland25.withgoogle.com/"/>
 
         <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css"/>
-        <link href="inc/style/screen.css" rel="stylesheet" type="text/css"/>
+        <link href="https://deutschland25.withgoogle.com/inc/style/screen.css" rel="stylesheet" type="text/css"/>
 
-        <link rel="icon" href="static/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="https://deutschland25.withgoogle.com/static/favicon.ico" type="image/x-icon">
 
-        <script src="inc/script/lib/modernizr/modernizr.js"></script>
+        <script src="https://deutschland25.withgoogle.com/inc/script/lib/modernizr/modernizr.js"></script>
         <script src="https://www.youtube.com/player_api"></script>
         
         <meta name="google" content="notranslate"/>
@@ -38,12 +38,12 @@
     </head>
     <body data-gaia-container="main">
 
-        <script src="inc/script/lib/analytics.js"></script>
+        <script src="https://deutschland25.withgoogle.com/inc/script/lib/analytics.js"></script>
 
         <div class="state-indicator"></div>
 
-        <script src="inc/script/app/config/requirejs.config.js"></script>
-        <script src="inc/script/lib/require/require.js" data-main="app/Main"></script>
+        <script src="https://deutschland25.withgoogle.com/inc/script/app/config/requirejs.config.js"></script>
+        <script src="https://deutschland25.withgoogle.com/inc/script/lib/require/require.js" data-main="app/Main"></script>
 
 
         <div id="site_disabler"></div>
